# bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  openapi.json
.github/workflows/: ci.yml  e2e-approval.yml  e2e-codedb.yml  e2e-conversation-scoping.yml  e2e-integration-real.yml  e2e-integration.yml  e2e-parallel.yml  e2e-websocket.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  middleware.rs  router.rs  sse.rs  state.rs  tests.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  config.rs  conversation.rs  error.rs  lib.rs  mcp.rs  metrics.rs  provider.rs  skill.rs  tests.rs  tool.rs  webhook.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  providers.rs  streaming.rs  tool_adapter.rs  tool_hook.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: config.rs  error.rs  language.rs  lib.rs  manager.rs  server.rs
crates/lsp/tests/: integration.rs
crates/mcp/src/: manager.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_map.rs  agent_runner.rs  agent_state.rs  compaction.rs  conversation.rs  drain.rs  supervisor.rs  system_reminder.rs  token_tracker.rs
crates/storage/src/: backend.rs  libsql_backend.rs  schema.rs  writer.rs
crates/tools/: Cargo.toml
crates/webhooks/: Cargo.toml
docs/api-reference/: index.md  websocket-events.md
docs/core-concepts/: webhooks.md
docs/getting-started/: configuration.md
docs/reference/: environment-variables.md
e2e/bridge-e2e/: .gitignore  Cargo.toml
fixtures/agents/: full_agent.json
scripts/: setup-lsp-servers.sh
(+51 files in other folders)
