[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-bridge = "0.2"
lsp-types = "0.97"
tokio = { workspace = true, features = ["process", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
which = "7"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
lsp-types = "0.97"
